
EXTRA_DIST = PGcodec.proto

lib_LIBRARIES = libpgdb.a

include_HEADERS = pgdb.h

libpgdb_a_SOURCES = \
	adt.h adt.c	\
	pgdb-internal.h \
	destroy.c	\
	get.c		\
	open.c		\
	options.c	\
	map.c		\
	pagefile.c	\
	rand.c		\
	root.c		\
	superblock.c	\
	util.c		\
	PGcodec.pb-c.h	\
	PGcodec.pb-c.c	\
	skeleton.c

