
EXTRA_DIST = PGcodec.proto

lib_LIBRARIES = libpgdb.a

include_HEADERS = pgdb.h

libpgdb_a_SOURCES = \
	adt.h adt.c	\
	pgdb-internal.h \
	destroy.c	\
	get.c		\
	map.c		\
	open.c		\
	options.c	\
	pagefile.c	\
	rand.c		\
	root.c		\
	PGcodec.pb-c.h	\
	PGcodec.pb-c.c	\
	skeleton.c	\
	superblock.c	\
	util.c		\
	uuid.c

